# qeOS

./: README.md
control-panel/: index.html  script.js  style.css
core/: Cargo.toml
core/rules/: default.rule
core/src/: api.rs  field.rs  main.rs  rule.rs  source.rs  split.rs
extension/: background.js  content.js  manifest.json  popup.html  popup.js
