[package]
name = "qeos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.8"
dirs = "5"
tokio = { version = "1", features = ["full"] }
